@@ -1,9 +1,0 @@
-#!/usr/bin/env python
-
-from agate.columns.base import Column
-
-class DateColumn(Column):
-    """
-    A column containing :class:`datetime.date` data.
-    """
-    pass
